--- a/ddhs_admin_panel/package.json
+++ b/ddhs_admin_panel/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.14",
     "axios": "^1.8.2",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-router": "^6.30.0",
     "react-router-dom": "^6.30.0",
     "tailwindcss": "^4.0.14"
